--- a/Rejection.conf
+++ b/Rejection.conf
@@ -3,5 +3,6 @@
 
 hostname = github.com, api.weibo.cn
 
+// Weibo
 ^http://u1.img.mobile.sina.cn/public/files/image/\w{3}x\w{2,4}.+(png|jpg|gif|mp4)$ - reject
 ^https?://api.weibo.cn/2/statuses/(extend\?gsid=|longtext_show_batch) - reject
