--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,5 +1,5 @@
 # 2018年11月23日 15:49
-hostname = *ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,
+hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,
 mlife.cmbchina.com,fuss10.elemecdn.com
 
 ^https://sf\d-ttcdn-tos.pstatp.com/obj/web.business.image/ - reject
