--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,25 +1,64 @@
-# 2018年11月23日 15:55
-hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,fuss10.elemecdn.com
+# 2018年11月23日 22:12
+hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,fuss10.elemecdn.com
 
+// 抖音视频下载去水印 
+(?<=&watermark=)1(?=.*) 0 302
+
+// 复写 Google CN
+^http://www.google.cn http://www.google.com.hk 302
+
+// 拦截抖音短视频启动广告
 ^https://sf\d-ttcdn-tos.pstatp.com/obj/web.business.image/ - reject
+
+// 拦截微博启动广告和正文推广
 ^http://u1.img.mobile.sina.cn/public/files/image/\d{3}x\d{4}.+(png|jpg|gif|mp4)$ - reject
 ^https://api.weibo.cn/2/statuses/(extend\?gsid=|longtext_show_batch) - reject
+
+// 拦截YouTube插播视频广告
 ^https://youtubei.googleapis.com/.+ad_break - reject
+
+// 拦截腾讯视频开头视频广告
 ^https://lives.l.qq.com/livemsg\?sdtfrom= - reject
+
+// 拦截京东金融启动广告和悬浮广告
 ^https://ms.jr.jd.com/gw/generic/base/na/m/ad - reject
 ^https://img\d{1,}.360buyimg.com/jrpmobile/jfs/.+width=225&height=225$ - reject
+
+// 拦截美团和美团外卖启动广告
 ^https?://p\d.meituan.net/(mmc|wmbanner)/ - reject
+
+// 拦截携程启动广告
 ^https://dimg\d{2}.c-ctrip.com/images/.+_750_1334 - reject
+
+// 拦截企鹅电竞启动广告
 ^http://shp.qpic.cn/pggamehead/.+new=1.0&w=1242&h=2208$ - reject
+
+// 拦截招商银行启动广告
 ^https://pic1cdn.cmbchina.com/appinitads/ - reject
+
+// 拦截淘宝启动广告
 ^https://gw.alicdn.com/tfs/\w+-1125-1602 - reject
+
+// 拦截京东启动广告
 ^https://m.360buyimg.com/mobilecms/s(640x1136|750x1624|862x90)_jfs/ - reject
+
+// 拦截网易云音乐启动广告
 ^http://iadmusicmat.music.126.net/\w+.jpg$ - reject
 ^https?://p\d.music.126.net/\w+==/10995\d{13}.jpg$ - reject
+
+// 拦截知乎启动广告和宣传广告
 ^https://api.zhihu.com/(real_time_)?launch\?app= - reject
+
+// 拦截滴滴出行启动广告
 ^https://img-\w+.didistatic.com/static/zhuancheimg/image-1242-2208/.+.jpg$ - reject
+
+// 拦截腾讯视频和腾讯新闻以及QQ音乐启动广告
 ^http://splashqqlive.gtimg.com/website/\d{6}/ - reject
 ^http://.*/vlive.qqvideo.tc.qq.com/.+.mp4 - reject
 ^https?://wa.gtimg.com/website/\d{6}/\w+_.{3} - reject
+
+// 拦截掌上生活启动广告和悬浮广告
 ^https://mlife.cmbchina.com/ClientFace(Service)?/\w+Advertise(.+)?.json$ - reject
+
+// 拦截饿了么启动广告
 ^https://fuss10.elemecdn.com/.+/\d{3}/h/\d{4}/ - reject
