--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,5 +1,5 @@
 # 2018年11月23日 22:12
-hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,fuss10.elemecdn.com
+hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,fuss10.elemecdn.com
 
 // 抖音视频下载去水印 
 (?<=&watermark=)1(?=.*) 0 302
@@ -48,6 +48,7 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 
 // 拦截知乎启动广告和宣传广告
 ^https://api.zhihu.com/(real_time_)?launch\?app= - reject
+^https://www.zhihu.com/api/v4/community-ad/
 
 // 拦截滴滴出行启动广告
 ^https://img-\w+.didistatic.com/static/zhuancheimg/image-1242-2208/.+.jpg$ - reject
