--- a/Rejection.conf
+++ b/Rejection.conf
@@ -48,7 +48,7 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 
 // 拦截知乎启动广告和宣传广告
 ^https://api.zhihu.com/(real_time_)?launch\?app= - reject
-^https://www.zhihu.com/api/v4/community-ad/
+^https://www.zhihu.com/api/v4/community-ad/ - reject
 
 // 拦截滴滴出行启动广告
 ^https://img-\w+.didistatic.com/static/zhuancheimg/image-1242-2208/.+.jpg$ - reject
