--- a/Rejection.conf
+++ b/Rejection.conf
@@ -64,3 +64,12 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 
 // 拦截饿了么启动广告
 ^https://fuss10.elemecdn.com/.+/\d{3}/h/\d{4}/ - reject
+
+// 拦截唱吧启动广告
+^http://aliimg.changba.com/cache/photo/startupimg/ - reject
+
+// 拦截广发银行发现精彩启动广告
+^http://mps.95508.com/mps/club/cardPortals/adv/\d+.jpg$
+
+// 拦截优酷启动广告
+^http://r1.ykimg.com/material/0A03/A1/\d{6}/ - reject
