--- a/Rejection.conf
+++ b/Rejection.conf
@@ -69,7 +69,7 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 ^http://aliimg.changba.com/cache/photo/startupimg/ - reject
 
 // 拦截广发银行发现精彩启动广告
-^http://mps.95508.com/mps/club/cardPortals/adv/\d+.jpg$
+^http://mps.95508.com/mps/club/cardPortals/adv/\d+.jpg$ - reject
 
 // 拦截优酷启动广告
 ^http://r1.ykimg.com/material/0A03/A1/\d{6}/ - reject
