--- a/Rejection.conf
+++ b/Rejection.conf
@@ -44,8 +44,9 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 ^https://m.360buyimg.com/mobilecms/s(640x1136|750x1624|862x90)_jfs/ - reject
 
 // 拦截网易云音乐启动广告
+^http://.+/eapi/(ad|ios|log|event)/ - reject
 ^http://iadmusicmat.music.126.net/\w+.jpg$ - reject
-^https?://p\d.music.126.net/\w+==/10995\d{13}.jpg$ - reject
+^https?://p\d.music.126.net/.+==/10995\d{13}.jpg$ - reject
 
 // 拦截知乎启动广告和宣传广告
 ^https://api.zhihu.com/(real_time_)?launch\?app= - reject
@@ -73,3 +74,6 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 
 // 拦截优酷启动广告
 ^http://r1.ykimg.com/material/0A03/A1/\d{6}/ - reject
+
+// 拦截简书启动广告
+^https://upload.jianshu.io/admin/splash_screen_images/images/.+/w/\d{3}/h/\d{4} - reject
