--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,5 +1,5 @@
-# 2018年11月24日 12:24
-hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,fuss10.elemecdn.com
+# 2018年11月24日 19:14
+hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com
 
 // 抖音视频下载去水印 
 (?<=&watermark=)1(?=.*) 0 302
