--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,5 +1,5 @@
 # 2018年11月24日 19:14
-hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com
+hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com
 
 // 抖音视频下载去水印 
 (?<=&watermark=)1(?=.*) 0 302
@@ -69,8 +69,15 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 // 拦截唱吧启动广告
 ^http://aliimg.changba.com/cache/photo/startupimg/ - reject
 
+// 拦截界面新闻启动广告和弹窗
+^https://img.jiemian.com/ads/ - reject
+
 // 拦截广发银行发现精彩启动广告
 ^http://mps.95508.com/mps/club/cardPortals/adv/\d+.jpg$ - reject
+
+// 拦截ofo小黄车启动广告
+^https://ma.ofo.com/ads - reject
+^https://activity2.api.ofo.com/ofo/Api/v2/ads - reject
 
 // 拦截优酷启动广告
 ^http://r1.ykimg.com/material/0A03/A1/\d{6}/ - reject
