--- a/Rejection.conf
+++ b/Rejection.conf
@@ -84,3 +84,8 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 
 // 拦截简书启动广告
 ^https://upload.jianshu.io/admin/splash_screen_images/images/.+/w/\d{3}/h/\d{4} - reject
+
+
+# Misc
+(ps|sv|offnavi|newvector|ulog.imap|newloc)(.map)?.(baidu|n.shifen).com - reject
+^https?://oimage\w\d.ydstatic.com/image\?.+=adpublish - reject
