--- a/Rejection.conf
+++ b/Rejection.conf
@@ -64,7 +64,8 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 ^https://mlife.cmbchina.com/ClientFace(Service)?/\w+Advertise(.+)?.json$ - reject
 
 // 拦截饿了么启动广告
-^https://fuss10.elemecdn.com/.+/\d{3}/h/\d{4}/ - reject
+^https://fuss10.elemecdn.com/.+/w/\d{3}/h/\d{4}/ - reject
+^https://fuss10.elemecdn.com.+.mp4 - reject
 
 // 拦截唱吧启动广告
 ^http://aliimg.changba.com/cache/photo/startupimg/ - reject
@@ -80,7 +81,9 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 ^https://activity2.api.ofo.com/ofo/Api/v2/ads - reject
 
 // 拦截优酷启动广告
-^http://r1.ykimg.com/material/0A03/A1/\d{6}/ - reject
+^http://r1.ykimg.com/\w{30,35}\.jpg$ - reject
+^http://r1.ykimg.com/material/.+/\d{6}/ - reject
+^http://r1\.ykimg.com/material/.+/\d{3}-\d{4} - reject
 
 // 拦截简书启动广告
 ^https://upload.jianshu.io/admin/splash_screen_images/images/.+/w/\d{3}/h/\d{4} - reject
