--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,4 +1,4 @@
-# 2018年11月25日 11:40
+# 2018年11月25日 12:39
 hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com,*.chelaile.net.cn,*.ydstatic.com
 
 // 抖音视频下载去水印 
@@ -83,7 +83,7 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 // 拦截优酷启动广告
 ^http://r1.ykimg.com/\w{30,35}\.jpg$ - reject
 ^http://r1.ykimg.com/material/.+/\d{6}/ - reject
-^http://r1\.ykimg.com/material/.+/\d{3}-\d{4} - reject
+^http://r1.ykimg.com/material/.+/\d{3}-\d{4} - reject
 
 // 拦截简书启动广告
 ^https://upload.jianshu.io/admin/splash_screen_images/images/.+/w/\d{3}/h/\d{4} - reject
