--- a/Rejection.conf
+++ b/Rejection.conf
@@ -91,7 +91,13 @@ hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtub
 // 拦截车来了推广广告
 ^https://(api|www|atrace).chelaile.net.cn/adpub/ - reject
 
+// 拦截Keep健身启动广告
+^https://static1.keepcdn.com/.+\d{3}x\d{4} - reject
+
+// 拦截秒拍启动广告
+^http://b-api.ins.miaopai.com/1/ad/\w+.json$ - reject
+
 
 # Misc
 (ps|sv|offnavi|newvector|ulog.imap|newloc)(.map)?.(baidu|n.shifen).com - reject
-^https?://oimage\w\d.ydstatic.com/image\?.+=adpublish - reject
+^https?://oimage\w\d.ydstatic.com/.+=adpublish - reject
