--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,9 +1,12 @@
 
-# 2018年11月26日 17:49
-hostname = github.com,aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com,*.chelaile.net.cn,*.ydstatic.com,static1.keepcdn.com
+# 2018年11月26日 22:29
+hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com,*.chelaile.net.cn,*.ydstatic.com,static1.keepcdn.com
 
-// 抖音视频下载去水印 
+// 抖音去水印下载
 (?<=&watermark=)1(?=&) 0 302
+
+// 微视去水印下载
+(?<=vide.f)730(?=.mp4) 30 302
 
 // 复写 Google CN
 ^http://www.google.cn http://www.google.com.hk 302
