--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,6 +1,6 @@
 
-# 2018年11月26日 22:29
-hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com,*.chelaile.net.cn,*.ydstatic.com,static1.keepcdn.com
+# 2018年11月27日 11:45
+hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com,*.chelaile.net.cn,*.ydstatic.com,static1.keepcdn.com,qzonestyle.gtimg.cn
 
 // 抖音去水印下载
 (?<=&watermark=)1(?=&) 0 302
@@ -100,6 +100,10 @@ hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleap
 
 // 拦截秒拍启动广告
 ^http://b-api.ins.miaopai.com/1/ad/\w+.json$ - reject
+
+// 拦截微视启动广告和播放页广告
+^https://qzonestyle.gtimg.cn/qzone/space_item/boss_pic/ - reject
+^http://qzonestyle.gtimg.cn/qzone/qzactStatics/imgs/\w+.png\?t=webp$ - reject
 
 
 # Misc
