--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,5 +1,5 @@
 
-# 2018年11月27日 11:45
+# 2018年11月27日 17:06
 hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com,*.chelaile.net.cn,*.ydstatic.com,static1.keepcdn.com,qzonestyle.gtimg.cn
 
 // 抖音去水印下载
@@ -104,6 +104,9 @@ hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleap
 // 拦截微视启动广告和播放页广告
 ^https://qzonestyle.gtimg.cn/qzone/space_item/boss_pic/ - reject
 ^http://qzonestyle.gtimg.cn/qzone/qzactStatics/imgs/\w+.png\?t=webp$ - reject
+
+// 拦截驾考宝典启动广告和应用内广告
+^http://smart.789.image.mucang.cn/advert-image/.+\d{3}X\d{3,} - reject
 
 
 # Misc
