--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,6 +1,6 @@
 
-# 2018年11月28日 10:16
-hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com,*.chelaile.net.cn,*.ydstatic.com,static1.keepcdn.com,qzonestyle.gtimg.cn
+# 2018年11月28日 18:29
+hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleapis.com,youtubei.googleapis.com,lives.l.qq.com,ms.jr.jd.com,img*.360buyimg.com,img.meituan.net,p*.meituan.net,dimg*.c-ctrip.com,pic1cdn.cmbchina.com,gw.alicdn.com,m.360buyimg.com,p*.music.126.net,www.zhihu.com,api.zhihu.com,img*.didistatic.com,wa.gtimg.com,mlife.cmbchina.com,upload.jianshu.io,fuss10.elemecdn.com,ma.ofo.com,activity2.api.ofo.com,img.jiemian.com,*.chelaile.net.cn,*.ydstatic.com,static1.keepcdn.com,qzonestyle.gtimg.cn,img*.doubanio.com,frodo.douban.com
 
 // 抖音去水印下载
 (?<=&watermark=)1(?=&) 0 302
@@ -107,6 +107,11 @@ hostname = aweme.snssdk.com,*ttcdn-tos.pstatp.com,api.weibo.cn,youtubei.googleap
 
 // 拦截驾考宝典启动广告和应用内广告
 ^http://smart.789.image.mucang.cn/advert-image/.+\d{3}X\d{3,} - reject
+
+// 拦截豆瓣启动广告和悬浮广告
+^https://frodo.douban.com/api/v2/movie/banner - reject
+^https://img\d.doubanio.com/view/dale-online/dale_ad/ - reject
+^https://img\d.doubanio.com/dae/niffler/niffler/images/.+.png$ - reject
 
 
 # Misc
