--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,9 +1,9 @@
 
-# 2018年11月29日 00:03
+# 2018年11月29日 14:39
 hostname = aweme.snssdk.com, *ttcdn-tos.pstatp.com, api.weibo.cn, youtubei.googleapis.com, youtubei.googleapis.com, lives.l.qq.com, ms.jr.jd.com, img*.360buyimg.com, img.meituan.net, p*.meituan.net, dimg*.c-ctrip.com, pic1cdn.cmbchina.com, gw.alicdn.com, m.360buyimg.com, p*.music.126.net, www.zhihu.com, api.zhihu.com, img*.didistatic.com, wa.gtimg.com, mlife.cmbchina.com, upload.jianshu.io, fuss10.elemecdn.com, ma.ofo.com, activity2.api.ofo.com, img.jiemian.com, *.chelaile.net.cn, *.ydstatic.com, static1.keepcdn.com, qzonestyle.gtimg.cn
 
 // 抖音去水印下载
-(?<=&watermark=)1(?=&) 0 302
+(?<=&line=0)[^*]+  302
 
 // 微视去水印下载
 (?<=vide.f)7.0(?=.mp4) 30 302
