--- a/Tiktok过滤器.conf
+++ b/Tiktok过滤器.conf
@@ -1,3 +1,6 @@
+#!MANAGED-CONFIG
+https://github.com/Choler/Surge/raw/master/Tiktok过滤器.conf
+
 [General]
 loglevel = notify
 dns-server = system, 1.2.4.8, 223.5.5.5
