--- a/Tiktok.conf
+++ b/Tiktok.conf
@@ -1,5 +1,4 @@
-#!MANAGED-CONFIG
-https://github.com/Choler/Surge/raw/master/Tiktok过滤器.conf
+#!MANAGED-CONFIG https://github.com/Choler/Surge/raw/master/Tiktok.conf
 
 [General]
 loglevel = notify
