--- a/Tiktok.conf
+++ b/Tiktok.conf
@@ -1,4 +1,4 @@
-#!MANAGED-CONFIG https://raw.githubusercontent.com/Choler/Surge/master/Tiktok.conf
+#!MANAGED-CONFIG https://github.com/Choler/Surge/raw/master/Tiktok.conf
 
 [General]
 loglevel = notify
