--- a/Tiktok.conf
+++ b/Tiktok.conf
@@ -13,7 +13,7 @@ keyword-filter = /video
 FINAL,DIRECT
 
 [URL Rewrite]
-(?<=&carrier_region=)CN(?=&is_my_cn=1) HK 307
+(?<=&carrier_region=)CN(?=&is_my_cn=1) JP 307
 
 [MITM]
 skip-server-cert-verify = true
